# ceTestApp

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  cliCurve.cpp
curves/: CMakeLists.txt
curves/include/: Circle.h  Curve.h  Curves.h  Ellipse.h  Helix.h
curves/src/: Circle.cpp  Curves.cpp  Ellipse.cpp  Helix.cpp
random/: CMakeLists.txt  randomCurves.cpp
utils/: CMakeLists.txt
utils/include/: ArgParse.h  Utils.h
utils/src/: ArgParse.cpp  Utils.cpp
